--- a/.github/workflows/workflow_dispatch-1.yml
+++ b/.github/workflows/workflow_dispatch-1.yml
@@ -14,7 +14,7 @@ on:
       logLevel:
         description: 'Log level'
         required: true
-        default: 'warning'
+        default: warning
         type: choice
         options:
         - info
